--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,6 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Email: garcia.perez@gmail.com</h1>
+    <h1>Email: garcia@gmail.com</h1>
 </body>
 </html>
